--- a/interior-detail.html
+++ b/interior-detail.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interior Detail - James' Elite Mobile Detail</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Interior Detail - James' Elite Mobile Detail</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Interior Detail Package</h1>
-    </header>
+  <header>
+    <h1>Interior Detail Package</h1>
+    <a href="index.html" class="back-button">← Back to Home</a>
+  </header>
 
-    <section>
-        <img src="images/interior-detail-placeholder.jpg" alt="Interior Detail" class="package-img">
-        <h2>What’s Included:</h2>
-        <ul>
-            <li>Full vacuuming of carpets and upholstery</li>
-            <li>Wipe down of all surfaces (dashboard, doors, etc.)</li>
-            <li>Deep cleaning of seats and floor mats</li>
-            <li>Window cleaning (inside and out)</li>
-            <li>Fragrance treatment</li>
-        </ul>
-        <p>Price: $70</p>
-    </section>
+  <section>
+    <img src="images/interior-detail-placeholder.jpg" alt="Interior Detail" class="package-img" />
+    <h2>What’s Included:</h2>
+    <ul>
+      <li>Full vacuuming of carpets and upholstery</li>
+      <li>Wipe down of all surfaces (dashboard, doors, etc.)</li>
+      <li>Deep cleaning of seats and floor mats</li>
+      <li>Window cleaning (inside and out)</li>
+      <li>Fragrance treatment</li>
+    </ul>
+    <p>Price: $70</p>
+  </section>
 
-    <footer>
-        <p>Call us: (951) 323-0544</p>
-    </footer>
+  <footer>
+    <p>Call us: (951) 323-0544</p>
+  </footer>
 </body>
 </html>
+
