--- a/monthly-plan.html
+++ b/monthly-plan.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monthly Maintenance Plan - James' Elite Mobile Detail</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Monthly Maintenance Plan - James' Elite Mobile Detail</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <h1>Monthly Maintenance Plan</h1>
-    </header>
+  <header>
+    <h1>Monthly Maintenance Plan</h1>
+    <a href="index.html" class="back-button">← Back to Home</a>
+  </header>
 
-    <section>
-        <img src="images/monthly-plan-placeholder.jpg" alt="Monthly Maintenance" class="package-img">
-        <h2>What’s Included:</h2>
-        <ul>
-            <li>Exterior wash and waxing</li>
-            <li>Wheel and tire cleaning</li>
-            <li>Interior vacuum and wipe-down</li>
-            <li>Monthly spot treatment for stains or build-up</li>
-            <li>Window cleaning (inside and out)</li>
-        </ul>
-        <p>Price: $100 per month (discount for 3-month prepay)</p>
-    </section>
+  <section>
+    <img src="images/monthly-plan-placeholder.jpg" alt="Monthly Maintenance" class="package-img" />
+    <h2>What’s Included:</h2>
+    <ul>
+      <li>Exterior wash and waxing</li>
+      <li>Wheel and tire cleaning</li>
+      <li>Interior vacuum and wipe-down</li>
+      <li>Monthly spot treatment for stains or build-up</li>
+      <li>Window cleaning (inside and out)</li>
+    </ul>
+    <p>Price: $100 per month (discount for 3-month prepay)</p>
+  </section>
 
-    <footer>
-        <p>Call us: (951) 323-0544</p>
-    </footer>
+  <footer>
+    <p>Call us: (951) 323-0544</p>
+  </footer>
 </body>
 </html>
