--- a/index.html
+++ b/index.html
@@ -12,29 +12,38 @@
         <p>Your car, our care.</p>
     </header>
 
-    <section id="packages">
-        <h2>Our Packages</h2>
-        <div class="package" onclick="window.location.href='basic-wash.html'">
-            <img src="images/basic-wash-placeholder.jpg" alt="Basic Wash">
-            <h3>Basic Wash</h3>
-            <p>Exterior wash & tire cleaning</p>
-        </div>
-        <div class="package" onclick="window.location.href='interior-detail.html'">
-            <img src="images/interior-detail-placeholder.jpg" alt="Interior Detail">
-            <h3>Interior Detail</h3>
-            <p>Vacuum & interior wipe-down</p>
-        </div>
-        <div class="package" onclick="window.location.href='full-detail.html'">
-            <img src="images/full-detail-placeholder.jpg" alt="Full Detail">
-            <h3>Full Detail</h3>
-            <p>Exterior & interior complete clean</p>
-        </div>
-        <div class="package" onclick="window.location.href='monthly-plan.html'">
-            <img src="images/monthly-plan-placeholder.jpg" alt="Monthly Plan">
-            <h3>Monthly Maintenance</h3>
-            <p>Regular cleanings at a discounted rate</p>
-        </div>
-    </section>
+    <section class="packages">
+  <h2>Our Packages</h2>
+
+  <div class="package">
+    <a href="basic-wash.html">
+      <img src="images/basic-wash-placeholder.jpg" alt="Basic Wash" class="package-img"/>
+      <h3>Basic Wash</h3>
+    </a>
+  </div>
+
+  <div class="package">
+    <a href="interior-detail.html">
+      <img src="images/interior-detail-placeholder.jpg" alt="Interior Detail" class="package-img"/>
+      <h3>Interior Detail</h3>
+    </a>
+  </div>
+
+  <div class="package">
+    <a href="full-detail.html">
+      <img src="images/full-detail-placeholder.jpg" alt="Full Detail" class="package-img"/>
+      <h3>Full Detail</h3>
+    </a>
+  </div>
+
+  <div class="package">
+    <a href="monthly-plan.html">
+      <img src="images/monthly-plan-placeholder.jpg" alt="Monthly Maintenance Plan" class="package-img"/>
+      <h3>Monthly Maintenance</h3>
+    </a>
+  </div>
+</section>
+
 
     <footer>
         <p>Call us: (951) 323-0544</p>
