--- a/basic-wash.html
+++ b/basic-wash.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Basic Wash Package</h1>
+        <a href="index.html" class="back-button">← Back to Home</a>
     </header>
 
     <section>
